--- a/second_page.html
+++ b/second_page.html
@@ -15,6 +15,6 @@
 		<img class="img-sec-p" src="/5368630986411205870.jpg" alt="">
 		<a class="button-next" href="third_page.html">Пройти дальше➳</a>
 	</div>
-	<script type="module" src="src/js/third-page.js"></script>
+	<script type="module" src="src/js/sec-page.js"></script>
 </body>
 </html>
