--- a/eight_page.html
+++ b/eight_page.html
@@ -23,6 +23,6 @@
 		</div>
 		<a class="button-next" href="last.html">Пройти дальше➳</a>
 	</div>
-	<script type="module" src="src/js/third-page.js"></script>
+	<script type="module" src="/src/js/third-page.js"></script>
 </body>
 </html>
