--- a/third_page.html
+++ b/third_page.html
@@ -12,6 +12,6 @@
 		<p class="p-sec">Котик, очень рада что ты у меня есть и просто есть, ты мне очень помогаешь и поддерживаешь в моих начинаниях и, поговорив с тобой мне становится легче принимать какие то решения и не бояться и не тревожиться</p>
 		<a class="button-next" href="fourth_page.html">Пройти дальше➳</a>
 	</div>
-	<script type="module" src="src/js/third-page.js"></script>
+	<script type="module" src="/src/js/third-page.js"></script>
 </body>
 </html>
