--- a/sixth_page.html
+++ b/sixth_page.html
@@ -14,6 +14,6 @@
 		<div class="tenor-gif-embed" data-postid="8496183951799547188" data-share-method="host" data-aspect-ratio="0.810573" data-width="200px"><a href="https://tenor.com/view/peach-cat-waving-her-behind-blowing-gas-cartoon-gif-8496183951799547188">Peach Cat Waving Her Behind GIF</a>from <a href="https://tenor.com/search/peach+cat-gifs">Peach Cat GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 		<a class="button-next" href="seven_page.html">Пройти дальше➳</a>
 	</div>
-	<script type="module" src="src/js/third-page.js"></script>
+	<script type="module" src="/src/js/third-page.js"></script>
 </body>
 </html>
