--- a/fives_page.html
+++ b/fives_page.html
@@ -15,6 +15,6 @@
 	<div class="img-fiv-div">
 		<img class="img-fiv" src="/0ecdc8a05dbf1af26077ab213ac9cf1e.png" alt="">
 	</div>
-	<script type="module" src="/src/js/third-page.js"></script>
+	<script type="module" src="src/js/third-page.js"></script>
 </body>
 </html>
