--- a/last.html
+++ b/last.html
@@ -34,6 +34,6 @@
 			<a class="button-next" href="nine_page.html">Пройти дальше➳</a>
 		</div>
 	</div>
-	<script type="module" src="/src/js/last.js"></script>	
+	<script type="module" src="src/js/last.js"></script>	
 </body>
 </html>
