--- a/seven_page.html
+++ b/seven_page.html
@@ -12,6 +12,6 @@
 		<p class="p-sec">Я с тобой по настоящему счастлива, малыш</p>
 		<a class="button-next" href="eight_page.html">Пройти дальше➳</a>
 	</div>
-	<script type="module" src="/src/js/third-page.js"></script>
+	<script type="module" src="src/js/third-page.js"></script>
 </body>
 </html>
