--- a/fourth_page.html
+++ b/fourth_page.html
@@ -12,6 +12,6 @@
 		<p class="p-sec">Я тебя очень сильно сильно люблю и мне правда не важно что именно ты мне даришь и делаешь, мне важно само внимание, и я чувствую каждый раз что ты напрягаешься, а не надо, расслабься и все будит хорошо, зуб даю, мне будет от тебя даже брелок приятно или просто с тобой погулять без конкретных идей</p>
 		<a class="button-next" href="fives_page.html">Пройти дальше➳</a>
 	</div>
-	<script type="module" src="/src/js/third-page.js"></script>
+	<script type="module" src="src/js/third-page.js"></script>
 </body>
 </html>
