--- a/nine_page.html
+++ b/nine_page.html
@@ -9,6 +9,6 @@
 </head>
 <body class="body">
 	<canvas id="heart"></canvas>
-	<script type="module" src="/src/js/nine.js"></script>
+	<script type="module" src="src/js/nine.js"></script>
 </body>
 </html>
