--- a/second_page.html
+++ b/second_page.html
@@ -12,7 +12,7 @@
 		<div></div>
 		<!-- <h1 class="p-title">Привет, малыш❤</h1> -->
 		<p class="p-sec">Сегодня нам исполняется целых 2 годика и так как я не могу с тобой провести этот день вместе я тебе сделала небольшую приколюху</p>
-		<img class="img-sec-p" src="/romanticc/5368630986411205870.jpg" alt="">
+		<img class="img-sec-p" src="/5368630986411205870.jpg" alt="">
 		<a class="button-next" href="third_page.html">Пройти дальше➳</a>
 	</div>
 	<script type="module" src="src/js/sec-page.js"></script>
