--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 			<p class="p-home1">Здесь тебя ждет небольшой подарочек, просто жмякай нужные кнопочки</p>
 			<a class="button-next" href="second_page.html">Пройти дальше➳</a>
 		</div>
-    <script type="module" src="src/js/third-page.js"></script>
+    <script type="module" src="src/js/main.js"></script>
   </body>
 </html>
